--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ It then fetches IP addresses of DPC&rsquo;s and forwards to the external section
 
 <h3 id="http-request">HTTP Request</h3>
 
-<p><code class="prettyprint">GET http://202.164.192.189:3001/pktnew-user.json</code></p>
+<p><code class="prettyprint">GET http://202.164.192.189:3001/pktuser-new.json</code></p>
 
 <h3 id="query-parameters">Query Parameters</h3>
 
