publish: Added missing field descriptor in Workabilities
generated from commit dca504164a7aa26cb8b2141a620d0900f2200d36

--- a/index.html
+++ b/index.html
@@ -2674,6 +2674,11 @@ Remember — 403 error means username or password is incorrect!
 <td>object id of animal record</td>
 </tr>
 <tr>
+<td>pktfemale[Cows_WorksDate]</td>
+<td>Today</td>
+<td>Date of workability scoring</td>
+</tr>
+<tr>
 <td>pktupdate[Pktupdates_ID]</td>
 <td>NULL</td>
 <td>Generated ID for pktupdates record</td>
